--- a/src/lib/styles/common.scss
+++ b/src/lib/styles/common.scss
@@ -19,6 +19,12 @@
 }
 * {
 	box-sizing: border-box;
+	color: $black;
+	font-family: Rounded Elegance;
+	font-size: 1rem;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 2rem; 
 }
 body {
 	margin: 0;
@@ -30,10 +36,10 @@ body {
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 }
-p {
+p, li {
 	color: $black;
 	font-family: Rounded Elegance;
-	font-size: 1.5rem;
+	font-size: 1.2rem;
 	font-style: normal;
 	font-weight: 400;
 	line-height: 2rem; /* 133.333% */
@@ -41,10 +47,14 @@ p {
 h1 {
 	color: $lime;
 	font-family: Fladeo;
-	font-size: 6rem;
+	font-size: 4rem;
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
 	margin: 0;
 	text-shadow: 1px 1px 0 $black, -1px 1px 0 $black, -1px -1px 0 $black, 1px -1px 0 $black;
+}
+
+ul {
+	list-style: none;
 }
