--- a/src/lib/styles/common.scss
+++ b/src/lib/styles/common.scss
@@ -46,7 +46,7 @@ body {
 	padding: 0;
 	width: 100%;
 	height: 100%;
-	background: url('$lib/styles/moasweb2.png');
+	background: url('$lib/styles/images/moasweb2.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
