--- a/src/lib/styles/common.scss
+++ b/src/lib/styles/common.scss
@@ -20,10 +20,14 @@
 * {
 	box-sizing: border-box;
 	color: $black;
+
 	font-family: Comfortaa;
 	font-style: normal;
 	font-size: 1rem;
 	line-height: 2rem;
+
+	margin: 0;
+	padding: 0;
 }
 
 @media (min-width: 768px) {
@@ -44,12 +48,13 @@
 body {
 	margin: 0;
 	padding: 0;
+
 	width: 100%;
 	height: 100%;
-	background: url('/moasweb2.png');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+
+	background: radial-gradient(86.3% 64.62% at 44.97% 50%, #bb90fe 0%, #bb90fe 54.17%, #a368ff 100%);
+
+	
 }
 p,
 li {
@@ -64,13 +69,40 @@ h1 {
 	color: $lime;
 	font-family: Fladeo;
 	font-size: 4rem;
+	line-height: 3.5rem;
+
 	font-style: normal;
 	font-weight: 400;
-	line-height: normal;
+
 	margin: 0;
-	text-shadow: 1px 1px 0 $black, -1px 1px 0 $black, -1px -1px 0 $black, 1px -1px 0 $black;
+	text-shadow: 0.3rem 0.3rem 0 $black, -0.1rem 0.1rem 0 $black, -0.1rem -0.1rem 0 $black,
+		0.1rem -0.1rem 0 $black;
 }
 
 ul {
 	list-style: none;
+}
+
+.container {
+	margin-top: 4rem;
+
+	display: flex;
+	flex-wrap: wrap;
+
+	justify-content: center;
+	align-items: flex-start;
+
+	height: 18rem;
+
+	gap: 2rem;
+}
+
+.container .item {
+	flex-grow: 0;
+	flex-basis: 30%;
+}
+
+*:focus-visible {
+	outline: 3px solid $focus;
+	outline-offset: 3px;
 }
