--- a/src/lib/styles/common.scss
+++ b/src/lib/styles/common.scss
@@ -1,13 +1,7 @@
 @import '$lib/styles/variables.scss';
-
-@font-face {
-	font-family: 'Fladeo';
-	font-style: normal;
-	font-weight: 400;
-	src: url('$lib/styles/fonts/Fladeo.eot'); /* IE9 Compat Modes */
-	src: local('Fladeo'), url('$lib/styles/fonts/Fladeo.eot') format('embedded-opentype'),
-		/* Modern Browsers */ url('$lib/styles/fonts/Fladeo.ttf') format('truetype');
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @font-face {
 	font-family: 'Comfortaa';
@@ -44,115 +38,4 @@
 	* {
 		font-size: 16px;
 	}
-}
-body {
-	margin: 0;
-	padding: 0;
-
-	width: 100%;
-	height: 100%;
-
-	background: radial-gradient(86.3% 64.62% at 44.97% 50%, #bb90fe 0%, #bb90fe 54.17%, #a368ff 100%);
-}
-p,
-li {
-	color: $black;
-	font-family: Comfortaa;
-	font-size: 1;
-	font-style: normal;
-	font-weight: 400;
-	line-height: 2rem;
-}
-h1 {
-	color: $lime;
-	font-family: Fladeo;
-	font-size: 4rem;
-	line-height: 3.5rem;
-
-	font-style: normal;
-	font-weight: 400;
-
-	margin: 0;
-	text-shadow: 0.3rem 0.3rem 0 $black, -0.1rem 0.1rem 0 $black, -0.1rem -0.1rem 0 $black,
-		0.1rem -0.1rem 0 $black;
-}
-
-ul {
-	list-style: none;
-}
-
-.container {
-	margin-top: 4rem;
-
-	display: flex;
-	flex-wrap: wrap;
-
-	justify-content: center;
-	align-items: flex-start;
-
-	height: 18rem;
-
-	gap: 2rem;
-}
-
-.flex {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-.container .item {
-	flex-grow: 0;
-	flex-basis: 30%;
-}
-
-*:focus-visible {
-	outline: 3px solid $focus;
-	outline-offset: 3px;
-}
-
-button {
-	border-radius: 1rem;
-	border: 0.1rem solid $lavender-dark;
-
-	background-color: $lavender-light;
-}
-button:hover {
-	background-color: $lime-light;
-	cursor: pointer;
-	scale: 1.2;
-}
-
-img {
-	border-radius: 1.5rem;
-	border: 0.1rem solid $lavender-dark;
-
-	object-fit: cover;
-}
-// scrollbar stuff
-
-/* width */
-::-webkit-scrollbar {
-	width: 5px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-	background: $lavender-light;
-	margin: 1.5rem;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: $lavender-dark;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: $black;
-}
-
-
-* {
-	transition: 500ms;
 }
