--- a/src/lib/styles/common.scss
+++ b/src/lib/styles/common.scss
@@ -6,10 +6,17 @@
 @font-face {
 	font-family: 'Comfortaa';
 	font-style: normal;
-	font-weight: 500;
+	font-weight: 400;
 	src: url('$lib/styles/fonts/Comfortaa.ttf'); /* IE9 Compat Modes */
 	src: local('Comfortaa'), url('$lib/styles/fonts/Comfortaa.eot') format('embedded-opentype'),
 		/* Modern Browsers */ url('$lib/styles/fonts/Comfortaa.ttf') format('truetype');
+}
+@font-face {
+	font-family: 'Bungee';
+	font-style: normal;
+	font-weight: 400;
+	src: url('$lib/styles/fonts/Bungee.ttf'); /* IE9 Compat Modes */
+	src: local('Bungee'), url('$lib/styles/fonts/Bungee.ttf') format('truetype');
 }
 * {
 	box-sizing: border-box;
@@ -17,25 +24,10 @@
 
 	font-family: Comfortaa;
 	font-style: normal;
-	font-size: 1rem;
+	font-size: 14px;
+
 	line-height: 1.5rem;
 
 	margin: 0;
 	padding: 0;
-}
-
-@media (min-width: 768px) {
-	* {
-		font-size: 12px;
-	}
-}
-@media (min-width: 1280px) {
-	* {
-		font-size: 14px;
-	}
-}
-@media (min-width: 1920px) {
-	* {
-		font-size: 16px;
-	}
 }
